<resources>
    <string name="app_name">Progra-3-2022</string>

    <string name="hello_world">Hola mundo</string>
    <string name="numero_numbner">Número</string>
    <string name="ejemplo_parrafo">hola estudiantes de progra 3 \n<b> este es un ejemplo de parrafo</b></string>
    <string name="new_number">Nuevo Número</string>
    <string name="save">guardar</string>
    <string name="activity_change">Cambio de Activity</string>
    <string name="this_is_a_vertical">This is a vertical</string>
    <string name="linear_layout_example">Linear Layout example</string>
    <string name="and_this">And this</string>
    <string name="this_is_a_horizontal">This is a horizontal</string>
    <string name="name">Nombre:</string>
    <string name="dev_name">Hugo Fabian Flores Yañez</string>
    <string name="degree">Posición:</string>
    <string name="programing_teacher">Docente de Progra 3</string>
    <string name="hobie">Hobie:</string>
    <string name="hobie_description">Pokemon Trainer</string>
    <string name="test_string">Este es un ejercicio de examen</string>
    <string name="exam">Examen</string>
    <string name="saved_data">El dato guardado es:</string>
    <string name="d_de_diosito">D de Diosito</string>
    <string name="c_de_cristo">C de Cristo</string>
    <string name="b_de_biblia">B de Biblia</string>
    <string name="a_de_am_n">A de Amén</string>
    <string name="include_data">Incluir los datos del Spinner</string>
    <string name="delete">Eliminar</string>
    <string name="show">mostrar</string>
    <string name="show_popup">mostrar popup</string>
    <string name="accept">aceptar</string>
    <string name="popup_example">Este es un ejemplo de popup</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mail">Correo</string>
    <string name="password">Contraseña</string>
    <string name="login">login</string>
    <string name="signup">Registrarse</string>
    <string name="continuar">Continuar</string>
</resources>