<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/basic_margin"
    android:background="@color/sandy_brown"
    tools:context=".activity.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_app"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="75dp"
        app:layout_constraintBottom_toBottomOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_launcher" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/email_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/basic_margin"
        android:text="@string/mail"
        android:textColor="@color/rosewood"
        app:layout_constraintTop_toBottomOf="@+id/card_view_app" />

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/mail"
        android:maxLength="30"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:textColor="@color/rosewood"
        app:layout_constraintTop_toBottomOf="@+id/email_title" />

    <TextView
        android:textColor="@color/rosewood"
        android:id="@+id/password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/basic_margin"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/email_edit" />

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="20"
        android:textColor="@color/rosewood"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/password_title" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/basic_margin"
        android:text="@string/login"
        android:backgroundTint="@color/brick_red"
        app:layout_constraintTop_toBottomOf="@+id/password_edit" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/basic_margin"
        android:layout_marginEnd="10dp"
        android:text="@string/signup"
        android:backgroundTint="@color/claret"
        app:layout_constraintEnd_toStartOf="@+id/button_continue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <Button
        android:id="@+id/button_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/basic_margin"
        android:text="@string/continuar"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/claret"
        app:layout_constraintStart_toEndOf="@+id/button_signup"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />


</androidx.constraintlayout.widget.ConstraintLayout>