<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PresentationCardActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:src="@drawable/illimani" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#6F070707" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/text_view_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/text_view_name"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/text_view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="12dp"
                android:text="@string/dev_name"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/text_view_degree_title"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/text_view_degree_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/degree"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/text_view_degree"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/text_view_degree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/programing_teacher"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/text_hobbie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/hobie"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/text_view_hobie"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <TextView
                android:id="@+id/text_view_hobie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/hobie_description"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group_hobie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="text_view_hobie,text_hobbie_title"/>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="16dp"
                app:cardCornerRadius="50dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/profile" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>